meta3/y.output
Terminals unused in grammar

   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: PACKAGE ID SEMICOLON Declarations
    2        | PACKAGE ID SEMICOLON

    3 Declarations: Declarations VarDeclaration SEMICOLON
    4             | Declarations FuncDeclaration SEMICOLON
    5             | VarDeclaration SEMICOLON
    6             | FuncDeclaration SEMICOLON

    7 VarDeclaration: VAR VarSpec
    8               | VAR LPAR VarSpec SEMICOLON RPAR

    9 VarSpec: ID Ci Type
   10        | ID Type

   11 Ci: COMMA ID Ci
   12   | COMMA ID

   13 Type: INT
   14     | FLOAT32
   15     | BOOL
   16     | STRING

   17 FuncDeclaration: FUNC ID LPAR Parameters RPAR Type FuncBody
   18                | FUNC ID LPAR Parameters RPAR FuncBody

   19 Parameters: %empty
   20           | ID Type Cit
   21           | ID Type

   22 Cit: Cit COMMA ID Type
   23    | COMMA ID Type

   24 FuncBody: LBRACE VarsAndStatements RBRACE
   25         | LBRACE RBRACE

   26 VarsAndStatements: VarsAndStatements VarDeclaration SEMICOLON
   27                  | VarsAndStatements Statement SEMICOLON
   28                  | VarsAndStatements SEMICOLON
   29                  | VarDeclaration SEMICOLON
   30                  | Statement SEMICOLON
   31                  | SEMICOLON

   32 Statement: ID ASSIGN Expr
   33          | Block
   34          | IF Expr Block Else
   35          | FOR Expr Block
   36          | FOR Block
   37          | RETURN Expr
   38          | RETURN
   39          | FuncInvocation
   40          | ParseArgs
   41          | PRINT LPAR Expr RPAR
   42          | PRINT LPAR STRLIT RPAR
   43          | error

   44 Block: LBRACE Ss RBRACE
   45      | LBRACE RBRACE

   46 Else: ELSE Block
   47     | %empty

   48 Ss: Ss Statement SEMICOLON
   49   | Statement SEMICOLON

   50 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   51          | ID COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR

   52 FuncInvocation: ID LPAR RPAR
   53               | ID LPAR Expr RPAR
   54               | ID LPAR Expr Ce RPAR
   55               | ID LPAR error RPAR

   56 Ce: Ce COMMA Expr
   57   | COMMA Expr

   58 Expr: Expr OR Expr
   59     | Expr AND Expr
   60     | Expr LT Expr
   61     | Expr GT Expr
   62     | Expr EQ Expr
   63     | Expr NE Expr
   64     | Expr LE Expr
   65     | Expr GE Expr
   66     | Expr PLUS Expr
   67     | Expr MINUS Expr
   68     | Expr STAR Expr
   69     | Expr DIV Expr
   70     | Expr MOD Expr
   71     | NOT Expr
   72     | MINUS Expr
   73     | PLUS Expr
   74     | INTLIT
   75     | REALLIT
   76     | ID
   77     | FuncInvocation
   78     | LPAR Expr RPAR
   79     | LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 43 51 55 79
SEMICOLON (258) 1 2 3 4 5 6 8 26 27 28 29 30 31 48 49
BLANKID (259) 50 51
PACKAGE (260) 1 2
RETURN (261) 37 38
AND (262) 59
ASSIGN (263) 32 50 51
STAR (264) 68
COMMA (265) 11 12 22 23 50 51 56 57
DIV (266) 69
EQ (267) 62
GE (268) 65
GT (269) 61
LBRACE (270) 24 25 44 45
LE (271) 64
LPAR (272) 8 17 18 41 42 50 51 52 53 54 55 78 79
LSQ (273) 50
LT (274) 60
MINUS (275) 67 72
MOD (276) 70
NE (277) 63
NOT (278) 71
OR (279) 58
PLUS (280) 66 73
RBRACE (281) 24 25 44 45
RPAR (282) 8 17 18 41 42 50 51 52 53 54 55 78 79
RSQ (283) 50
ELSE (284) 46
FOR (285) 35 36
IF (286) 34
VAR (287) 7 8
INT (288) 13
FLOAT32 (289) 14
BOOL (290) 15
STRING (291) 16
PRINT (292) 41 42
PARSEINT (293) 50 51
FUNC (294) 17 18
CMDARGS (295) 50
ID (296) 1 2 9 10 11 12 17 18 20 21 22 23 32 50 51 52 53 54 55 76
INTLIT (297) 74
REALLIT (298) 75
STRLIT (299) 42
RESERVED (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Program (47)
    on left: 1 2, on right: 0
Declarations (48)
    on left: 3 4 5 6, on right: 1 3 4
VarDeclaration (49)
    on left: 7 8, on right: 3 5 26 29
VarSpec (50)
    on left: 9 10, on right: 7 8
Ci (51)
    on left: 11 12, on right: 9 11
Type (52)
    on left: 13 14 15 16, on right: 9 10 17 20 21 22 23
FuncDeclaration (53)
    on left: 17 18, on right: 4 6
Parameters (54)
    on left: 19 20 21, on right: 17 18
Cit (55)
    on left: 22 23, on right: 20 22
FuncBody (56)
    on left: 24 25, on right: 17 18
VarsAndStatements (57)
    on left: 26 27 28 29 30 31, on right: 24 26 27 28
Statement (58)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43, on right: 27 30 48
    49
Block (59)
    on left: 44 45, on right: 33 34 35 36 46
Else (60)
    on left: 46 47, on right: 34
Ss (61)
    on left: 48 49, on right: 44 48
ParseArgs (62)
    on left: 50 51, on right: 40
FuncInvocation (63)
    on left: 52 53 54 55, on right: 39 77
Ce (64)
    on left: 56 57, on right: 54 56
Expr (65)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
    76 77 78 79, on right: 32 34 35 37 41 50 53 54 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 78


State 0

    0 $accept: . Program $end

    PACKAGE  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: PACKAGE . ID SEMICOLON Declarations
    2        | PACKAGE . ID SEMICOLON

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: PACKAGE ID . SEMICOLON Declarations
    2        | PACKAGE ID . SEMICOLON

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: PACKAGE ID SEMICOLON . Declarations
    2        | PACKAGE ID SEMICOLON .

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 2 (Program)

    Declarations     go to state 8
    VarDeclaration   go to state 9
    FuncDeclaration  go to state 10


State 6

    7 VarDeclaration: VAR . VarSpec
    8               | VAR . LPAR VarSpec SEMICOLON RPAR

    LPAR  shift, and go to state 11
    ID    shift, and go to state 12

    VarSpec  go to state 13


State 7

   17 FuncDeclaration: FUNC . ID LPAR Parameters RPAR Type FuncBody
   18                | FUNC . ID LPAR Parameters RPAR FuncBody

    ID  shift, and go to state 14


State 8

    1 Program: PACKAGE ID SEMICOLON Declarations .
    3 Declarations: Declarations . VarDeclaration SEMICOLON
    4             | Declarations . FuncDeclaration SEMICOLON

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 1 (Program)

    VarDeclaration   go to state 15
    FuncDeclaration  go to state 16


State 9

    5 Declarations: VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 17


State 10

    6 Declarations: FuncDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 11

    8 VarDeclaration: VAR LPAR . VarSpec SEMICOLON RPAR

    ID  shift, and go to state 12

    VarSpec  go to state 19


State 12

    9 VarSpec: ID . Ci Type
   10        | ID . Type

    COMMA    shift, and go to state 20
    INT      shift, and go to state 21
    FLOAT32  shift, and go to state 22
    BOOL     shift, and go to state 23
    STRING   shift, and go to state 24

    Ci    go to state 25
    Type  go to state 26


State 13

    7 VarDeclaration: VAR VarSpec .

    $default  reduce using rule 7 (VarDeclaration)


State 14

   17 FuncDeclaration: FUNC ID . LPAR Parameters RPAR Type FuncBody
   18                | FUNC ID . LPAR Parameters RPAR FuncBody

    LPAR  shift, and go to state 27


State 15

    3 Declarations: Declarations VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 28


State 16

    4 Declarations: Declarations FuncDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 29


State 17

    5 Declarations: VarDeclaration SEMICOLON .

    $default  reduce using rule 5 (Declarations)


State 18

    6 Declarations: FuncDeclaration SEMICOLON .

    $default  reduce using rule 6 (Declarations)


State 19

    8 VarDeclaration: VAR LPAR VarSpec . SEMICOLON RPAR

    SEMICOLON  shift, and go to state 30


State 20

   11 Ci: COMMA . ID Ci
   12   | COMMA . ID

    ID  shift, and go to state 31


State 21

   13 Type: INT .

    $default  reduce using rule 13 (Type)


State 22

   14 Type: FLOAT32 .

    $default  reduce using rule 14 (Type)


State 23

   15 Type: BOOL .

    $default  reduce using rule 15 (Type)


State 24

   16 Type: STRING .

    $default  reduce using rule 16 (Type)


State 25

    9 VarSpec: ID Ci . Type

    INT      shift, and go to state 21
    FLOAT32  shift, and go to state 22
    BOOL     shift, and go to state 23
    STRING   shift, and go to state 24

    Type  go to state 32


State 26

   10 VarSpec: ID Type .

    $default  reduce using rule 10 (VarSpec)


State 27

   17 FuncDeclaration: FUNC ID LPAR . Parameters RPAR Type FuncBody
   18                | FUNC ID LPAR . Parameters RPAR FuncBody

    ID  shift, and go to state 33

    $default  reduce using rule 19 (Parameters)

    Parameters  go to state 34


State 28

    3 Declarations: Declarations VarDeclaration SEMICOLON .

    $default  reduce using rule 3 (Declarations)


State 29

    4 Declarations: Declarations FuncDeclaration SEMICOLON .

    $default  reduce using rule 4 (Declarations)


State 30

    8 VarDeclaration: VAR LPAR VarSpec SEMICOLON . RPAR

    RPAR  shift, and go to state 35


State 31

   11 Ci: COMMA ID . Ci
   12   | COMMA ID .

    COMMA  shift, and go to state 20

    $default  reduce using rule 12 (Ci)

    Ci  go to state 36


State 32

    9 VarSpec: ID Ci Type .

    $default  reduce using rule 9 (VarSpec)


State 33

   20 Parameters: ID . Type Cit
   21           | ID . Type

    INT      shift, and go to state 21
    FLOAT32  shift, and go to state 22
    BOOL     shift, and go to state 23
    STRING   shift, and go to state 24

    Type  go to state 37


State 34

   17 FuncDeclaration: FUNC ID LPAR Parameters . RPAR Type FuncBody
   18                | FUNC ID LPAR Parameters . RPAR FuncBody

    RPAR  shift, and go to state 38


State 35

    8 VarDeclaration: VAR LPAR VarSpec SEMICOLON RPAR .

    $default  reduce using rule 8 (VarDeclaration)


State 36

   11 Ci: COMMA ID Ci .

    $default  reduce using rule 11 (Ci)


State 37

   20 Parameters: ID Type . Cit
   21           | ID Type .

    COMMA  shift, and go to state 39

    $default  reduce using rule 21 (Parameters)

    Cit  go to state 40


State 38

   17 FuncDeclaration: FUNC ID LPAR Parameters RPAR . Type FuncBody
   18                | FUNC ID LPAR Parameters RPAR . FuncBody

    LBRACE   shift, and go to state 41
    INT      shift, and go to state 21
    FLOAT32  shift, and go to state 22
    BOOL     shift, and go to state 23
    STRING   shift, and go to state 24

    Type      go to state 42
    FuncBody  go to state 43


State 39

   23 Cit: COMMA . ID Type

    ID  shift, and go to state 44


State 40

   20 Parameters: ID Type Cit .
   22 Cit: Cit . COMMA ID Type

    COMMA  shift, and go to state 45

    $default  reduce using rule 20 (Parameters)


State 41

   24 FuncBody: LBRACE . VarsAndStatements RBRACE
   25         | LBRACE . RBRACE

    error      shift, and go to state 46
    SEMICOLON  shift, and go to state 47
    RETURN     shift, and go to state 48
    LBRACE     shift, and go to state 49
    RBRACE     shift, and go to state 50
    FOR        shift, and go to state 51
    IF         shift, and go to state 52
    VAR        shift, and go to state 6
    PRINT      shift, and go to state 53
    ID         shift, and go to state 54

    VarDeclaration     go to state 55
    VarsAndStatements  go to state 56
    Statement          go to state 57
    Block              go to state 58
    ParseArgs          go to state 59
    FuncInvocation     go to state 60


State 42

   17 FuncDeclaration: FUNC ID LPAR Parameters RPAR Type . FuncBody

    LBRACE  shift, and go to state 41

    FuncBody  go to state 61


State 43

   18 FuncDeclaration: FUNC ID LPAR Parameters RPAR FuncBody .

    $default  reduce using rule 18 (FuncDeclaration)


State 44

   23 Cit: COMMA ID . Type

    INT      shift, and go to state 21
    FLOAT32  shift, and go to state 22
    BOOL     shift, and go to state 23
    STRING   shift, and go to state 24

    Type  go to state 62


State 45

   22 Cit: Cit COMMA . ID Type

    ID  shift, and go to state 63


State 46

   43 Statement: error .

    $default  reduce using rule 43 (Statement)


State 47

   31 VarsAndStatements: SEMICOLON .

    $default  reduce using rule 31 (VarsAndStatements)


State 48

   37 Statement: RETURN . Expr
   38          | RETURN .

    LPAR     shift, and go to state 64
    MINUS    shift, and go to state 65
    NOT      shift, and go to state 66
    PLUS     shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    $default  reduce using rule 38 (Statement)

    FuncInvocation  go to state 71
    Expr            go to state 72


State 49

   44 Block: LBRACE . Ss RBRACE
   45      | LBRACE . RBRACE

    error   shift, and go to state 46
    RETURN  shift, and go to state 48
    LBRACE  shift, and go to state 49
    RBRACE  shift, and go to state 73
    FOR     shift, and go to state 51
    IF      shift, and go to state 52
    PRINT   shift, and go to state 53
    ID      shift, and go to state 54

    Statement       go to state 74
    Block           go to state 58
    Ss              go to state 75
    ParseArgs       go to state 59
    FuncInvocation  go to state 60


State 50

   25 FuncBody: LBRACE RBRACE .

    $default  reduce using rule 25 (FuncBody)


State 51

   35 Statement: FOR . Expr Block
   36          | FOR . Block

    LBRACE   shift, and go to state 49
    LPAR     shift, and go to state 64
    MINUS    shift, and go to state 65
    NOT      shift, and go to state 66
    PLUS     shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    Block           go to state 76
    FuncInvocation  go to state 71
    Expr            go to state 77


State 52

   34 Statement: IF . Expr Block Else

    LPAR     shift, and go to state 64
    MINUS    shift, and go to state 65
    NOT      shift, and go to state 66
    PLUS     shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 78


State 53

   41 Statement: PRINT . LPAR Expr RPAR
   42          | PRINT . LPAR STRLIT RPAR

    LPAR  shift, and go to state 79


State 54

   32 Statement: ID . ASSIGN Expr
   50 ParseArgs: ID . COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   51          | ID . COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   52 FuncInvocation: ID . LPAR RPAR
   53               | ID . LPAR Expr RPAR
   54               | ID . LPAR Expr Ce RPAR
   55               | ID . LPAR error RPAR

    ASSIGN  shift, and go to state 80
    COMMA   shift, and go to state 81
    LPAR    shift, and go to state 82


State 55

   29 VarsAndStatements: VarDeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 56

   24 FuncBody: LBRACE VarsAndStatements . RBRACE
   26 VarsAndStatements: VarsAndStatements . VarDeclaration SEMICOLON
   27                  | VarsAndStatements . Statement SEMICOLON
   28                  | VarsAndStatements . SEMICOLON

    error      shift, and go to state 46
    SEMICOLON  shift, and go to state 84
    RETURN     shift, and go to state 48
    LBRACE     shift, and go to state 49
    RBRACE     shift, and go to state 85
    FOR        shift, and go to state 51
    IF         shift, and go to state 52
    VAR        shift, and go to state 6
    PRINT      shift, and go to state 53
    ID         shift, and go to state 54

    VarDeclaration  go to state 86
    Statement       go to state 87
    Block           go to state 58
    ParseArgs       go to state 59
    FuncInvocation  go to state 60


State 57

   30 VarsAndStatements: Statement . SEMICOLON

    SEMICOLON  shift, and go to state 88


State 58

   33 Statement: Block .

    $default  reduce using rule 33 (Statement)


State 59

   40 Statement: ParseArgs .

    $default  reduce using rule 40 (Statement)


State 60

   39 Statement: FuncInvocation .

    $default  reduce using rule 39 (Statement)


State 61

   17 FuncDeclaration: FUNC ID LPAR Parameters RPAR Type FuncBody .

    $default  reduce using rule 17 (FuncDeclaration)


State 62

   23 Cit: COMMA ID Type .

    $default  reduce using rule 23 (Cit)


State 63

   22 Cit: Cit COMMA ID . Type

    INT      shift, and go to state 21
    FLOAT32  shift, and go to state 22
    BOOL     shift, and go to state 23
    STRING   shift, and go to state 24

    Type  go to state 89


State 64

   78 Expr: LPAR . Expr RPAR
   79     | LPAR . error RPAR

    error    shift, and go to state 90
    LPAR     shift, and go to state 64
    MINUS    shift, and go to state 65
    NOT      shift, and go to state 66
    PLUS     shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 91


State 65

   72 Expr: MINUS . Expr

    LPAR     shift, and go to state 64
    MINUS    shift, and go to state 65
    NOT      shift, and go to state 66
    PLUS     shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 92


State 66

   71 Expr: NOT . Expr

    LPAR     shift, and go to state 64
    MINUS    shift, and go to state 65
    NOT      shift, and go to state 66
    PLUS     shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 93


State 67

   73 Expr: PLUS . Expr

    LPAR     shift, and go to state 64
    MINUS    shift, and go to state 65
    NOT      shift, and go to state 66
    PLUS     shift, and go to state 67
    ID       shift, and go to state 68
    INTLIT   shift, and go to state 69
    REALLIT  shift, and go to state 70

    FuncInvocation  go to state 71
    Expr            go to state 94


State 68

   52 FuncInvocation: ID . LPAR RPAR
   53               | ID . LPAR Expr RPAR
   54               | ID . LPAR Expr Ce RPAR
   55               | ID . LPAR error RPAR
   76 Expr: ID .

    LPAR  shift, and go to state 82

    $default  reduce using rule 76 (Expr)


State 69

   74 Expr: INTLIT .

    $default  reduce using rule 74 (Expr)


State 70

   75 Expr: REALLIT .

    $default  reduce using rule 75 (Expr)


State 71

   77 Expr: FuncInvocation .

    $default  reduce using rule 77 (Expr)


State 72

   37 Statement: RETURN Expr .
   58 Expr: Expr . OR Expr
   59     | Expr . AND Expr
   60     | Expr . LT Expr
   61     | Expr . GT Expr
   62     | Expr . EQ Expr
   63     | Expr . NE Expr
   64     | Expr . LE Expr
   65     | Expr . GE Expr
   66     | Expr . PLUS Expr
   67     | Expr . MINUS Expr
   68     | Expr . STAR Expr
   69     | Expr . DIV Expr
   70     | Expr . MOD Expr
